--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "exec": "tsx 'src/main.ts'"
+    "exec": "tsx 'src/main.ts'",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.6.0",
-    "dedent": "^1.5.1",
     "dotenv": "^16.4.5",
     "playwright": "^1.42.1",
     "tsx": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.3"
+    "@types/node": "^20.12.3",
+    "vitest": "^1.4.0"
   }
 }
