Allow to choose OUTPUT_FORMAT based on .env value

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,5 @@ MONTH=01
 YEAR=2024
 
 # The format you want the output files in
-# Options are "CSV"
-OUTPUT_FORMAT=CSV
+# Options are "CSV" | "PDF" | "XLSX" | "XML" | "MT940"
+OUTPUT_FORMAT=PDF
